components/Article/Article.module.css
.article {
    width: 100%;
}

.title {
    margin: 0;
    font-size: 1.6rem;
}

.content {
    margin: 0;
    font-size: 1.2rem;
}

.body {
    width: 100%;
    display: flex;
    justify-content: space-between;
    margin-bottom: .8rem;
}

.text-content {
    margin-right: 1rem;
}

.article-img {
    margin-top: 1rem;
    background-color: red;
    min-width: 170px;
    max-width: 30%;
    height: 100px;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

